Fix issue where demo is not visible.

--- a/app/embed-box.styl
+++ b/app/embed-box.styl
@@ -42,6 +42,9 @@ body[data-embed-box-scroll-state="locked"]
 
   body, html
     &[data-embed-box-scroll-state="locked"]
+      bottom 0 !important
+      left 0 !important
       overflow hidden !important
       position fixed !important
-
+      right 0 !important
+      top 0 !important
